--- a/contact.html
+++ b/contact.html
@@ -14,26 +14,31 @@
 <body style="background-color: #dddddd; font-family: 'Poppins', Arial, sans-serif; font-size: 20px;">
   
 
-  <!-- Navigation bar -->
-  <nav style="background-color: #f8f4f4;; height: 80px;">
-    <div style="display: flex; align-items: center; height: 100%; margin-left: 40px; margin-right: 30px;">
-        <ul style="display: flex; align-items: center; list-style-type: none; gap: 30px;">
+<!-- Navigation bar -->
+<nav style="background-color: #f8f4f4;; height: 80px;">
+    <div
+        style="display: flex; align-items: center; height: 100%; margin-left: 40px; margin-right: 30px;">
+        <ul
+            style="display: flex; align-items: center; list-style-type: none; gap: 30px;">
             <li>
-                <a href="https://www.dumbways.id" target="_blank" style="margin-left: 40px;"><img src="assets/img/logo-dumbways.png" height="40px" alt="Logo Dumbways"></a>
-            </li>
-            <li class="nav-link">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="nav-link">
-                <a href="blog.html">Blog</a>
-            </li>
-        </ul>
-        <div style="display: flex ;justify-content: end; width: 100%; margin-right: 30px;">
-            <a href="contact.html" class="btn-contact">Contact Me</a>
+                <a href="https://www.dumbways.id" target="_blank" style="margin-left: 40px;">
+                    <img src="assets/img/logo-dumbways.png" height="40px" alt="Logo Dumbways"></a>
+                </li>
+                <li class="nav-link">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="nav-link">
+                    <a href="blog.html">Blog</a>
+                </li>
+            </ul>
+            <div
+                style="display: flex ;justify-content: end; width: 100%; margin-right: 30px;">
+                <a href="contact.html" class="btn-contact">Contact Me</a>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
     
+    <!-- Container untuk membungkus form -->
     <div class="container">
         <h2>GET IN TOUCH</h2>
         <form class="form-contact">
