--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <a href="index.html">Home</a>
             </li>
             <li class="nav-link">
-              <a style="cursor: pointer;">Blog</a>
-          </li>
+                <a href="blog.html">Blog</a>
+            </li>
         </ul>
         <div style="display: flex ;justify-content: end; width: 100%; margin-right: 30px;">
             <a href="contact.html" class="btn-contact">Contact Me</a>
