--- a/myproject.html
+++ b/myproject.html
@@ -17,26 +17,23 @@
   
 
 <!-- Navigation bar -->
-<nav style="background-color: #f8f4f4;; height: 80px;">
+<nav style="background-color: #f8f4f4; height: 80px;">
     <div
-        style="display: flex; align-items: center; height: 100%; margin-left: 40px; margin-right: 30px;">
+        style="display: flex; align-items: center; justify-content: space-between; height: 100%; padding: 0 40px;">
         <ul
             style="display: flex; align-items: center; list-style-type: none; gap: 30px;">
             <li>
-                <a href="https://www.dumbways.id" target="_blank" style="margin-left: 40px;">
+                <a href="https://www.dumbways.id" target="_blank">
                     <img src="assets/img/logo-dumbways.png" height="40px" alt="Logo Dumbways"></a>
                 </li>
                 <li class="nav-link">
                     <a href="index.html">Home</a>
                 </li>
                 <li class="nav-link">
-                    <a href="blog.html">Blog</a>
+                    <a href="myproject.html">My Project</a>
                 </li>
             </ul>
-            <div
-                style="display: flex ;justify-content: end; width: 100%; margin-right: 30px;">
-                <a href="contact.html" class="btn-contact">Contact Me</a>
-            </div>
+            <a href="contact.html" class="btn-contact">Contact Me</a>
         </div>
     </nav>
 
